# vio_data_simulation

./: .gitignore  CMakeLists.txt  README.md  build.sh  package.xml
config/: sim_config.yaml
include/camodocal/camera_models/: CataCamera.h  PinholeCamera.h
include/camodocal/chessboard/: ChessboardCorner.h  Spline.h
include/camodocal/gpl/: EigenUtils.h
main/: gener_alldata.cpp  gener_alldata_VIW.cpp
python_tool/: GeometryLib.py  draw_points.py  draw_points.py~  draw_trajcory.py  error.md  transformations.py
src/: gener_alldata.cpp  gener_alldata.cpp~  gener_alldata_txt.cpp  imu.cpp  imu.h  imusim.cpp~  param.cpp  param.h  test_se3_fitting.cpp~  utilities.cpp  utilities.h  wheel.cpp  wheel.h
src/camera_models/camera_models/: CataCamera.cc  EquidistantCamera.cc  PinholeCamera.cc
src/camera_models/chessboard/: Chessboard.cc
src/camera_models/gpl/: gpl.cc
